# resource_tracking

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE.txt  README.md  gunicorn.ini  gunicorn.py  manage.py  pollstations.py  pyproject.toml  requirements.txt  uwsgi.ini  uwsgi.ini.example
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  image-build-scan.yml  multi-build.yaml  multi-build.yml  run-tests.yml  secret-scan.yml
kustomize/: README.md
kustomize/base/: deployment.yaml  deployment_hpa.yaml  geoserver.yaml  geoserver_headless.yaml  geoserver_service.yaml  geoserver_statefulset.yaml  kustomization.yaml  persistentvolumeclaim.yaml  service.yaml  statefulset.yaml
kustomize/overlays/prod/: cronjob.yaml  cronjob_harvest_emails.yaml  deployment_hpa_patch.yaml  deployment_patch.yaml  deployment_prod_patch.yaml  geoserver_headless_patch.yaml  geoserver_patch.yaml  geoserver_pvc.yaml  geoserver_service_patch.yaml  geoserver_statefulset_patch.yaml  ingress.yaml  kustomization.yaml  pdb.yaml  persistentvolumeclaim_prod_patch.yaml  service.yaml  service_patch.yaml  statefulset_prod_patch.yaml
kustomize/overlays/prod/cronjobs/harvest-dfes/: kustomization.yaml  patch.yaml
kustomize/overlays/prod/cronjobs/harvest-email-dplus/: kustomization.yaml  patch.yaml
kustomize/overlays/uat/: deployment_hpa_patch.yaml  deployment_patch.yaml  deployment_uat_patch.yaml  geoserver_headless_patch.yaml  geoserver_patch.yaml  geoserver_service_patch.yaml  geoserver_statefulset_patch.yaml  ingress.yaml  kustomization.yaml  pdb.yaml  service.yaml  service_patch.yaml  statefulset_uat_patch.yaml
kustomize/template/: cronjob.yaml
radio/: admin.py  analysis.py  colorgradients.sld  forms.py  models.py  rainbow.sld  rainbow_255.json  rainbow_55.json  simplify.py  sqlviews.py  utils.py
radio/fixtures/: options.json
radio/management/commands/: simplify.py
radio/migrations/: 0001_initial.py  0002_auto_20200304_0917.py  0003_auto_20200306_0727.py  0004_auto_20200312_0812.py  0005_repeaterrxcoveragesimplified_repeatertxcoveragesimplified.py  0006_auto_20200318_1155.py  0007_auto_20200325_1112.py  0008_auto_20200325_1552.py  0009_auto_20200327_0749.py
radio/static/radio/: rainbow_255.sld  rainbow_55.sld
radio/templates/: number_labeled.html
resource_autoversion/: __init__.py
resource_tracking/: api.py  asgi.py  harvest.py  middleware.py  settings.py  urls.py  workers.py  wsgi.py
resource_tracking/management/commands/: harvest.py  harvest_tracking_email.py
resource_tracking/templatetags/: __init__.py  autoversion.py
shift_register/: admin.py  apps.py  models.py
shift_register/migrations/: 0001_initial.py  0002_employee.py  0003_employeeshift.py  0004_auto_20161005_1205.py  0005_auto_20161005_1205.py
tracking/: admin.py  api.py  apps.py  basic_auth.py  dblock.py  dbutils.py  email_utils.py  forms.py  geojsonviews.py  harvest.py  iriditrak_test.msg  models.py  reharvest.py  signals.py  sqlviews.py  test_harvest.py  test_signals.py  test_views.py  urls.py  utils.py  views.py
tracking/management/commands/: harvest_dfes_feed.py  harvest_fleetcare_db.py  harvest_netstar_feed.py  harvest_tracertrak_feed.py  harvest_tracking_email.py  harvest_tracplus.py  import_fleetcare_to_staging.py  sync_data.py
tracking/migrations/: 0001_initial.py  0002_auto_20160808_1640.py  0002_auto_20190111_1434.py  0003_auto_20160811_1303.py  0003_auto_20190308_1114.py  0004_auto_20160811_1358.py  0004_auto_20200102_0914.py  0005_auto_20160812_1554.py  0005_device_hidden.py  0006_auto_20160812_1642.py  0006_auto_20200213_1716.py  0007_auto_20161101_0823.py  0007_auto_20200214_0446.py  0008_auto_20161207_0950.py  0008_auto_20210119_0826.py  0009_auto_20161207_1220.py  0009_device_deleted.py  0010_auto_20170105_1052.py  0010_invalidloggedpoint.py  0011_auto_20170105_1135.py  0011_auto_20210423_0941.py  0012_auto_20170105_1303.py  0012_device_fire_type.py  0013_alter_device_fire_type.py  0013_device_rin_number.py  0014_auto_20170106_1253.py  0014_auto_20211019_0407.py  0015_alter_device_internal_only.py  0015_auto_20170131_1443.py  0016_alter_device_callsign.py  0016_auto_20170131_1448.py  0016_copy_data_to_other_details.py  0017_auto_20221220_1058.py  0017_remove_device_callsign.py  0018_auto_20170131_1626.py  0018_auto_20230911_0744.py  0019_auto_20170131_1646.py  0019_auto_20230911_0817.py  0020_alter_loggedpoint_raw.py  0020_auto_20170201_1046.py  (+26 more)
tracking/static/js/: device_detail.js  device_map.js  map.js  resource_map.js
tracking/static/sss/: L.SimpleGraticule.js  Ractive-decorators-sortable.js  jquery.print.js  leaflet-betterwms.js  leaflet.dump.js  mapbox-extension.css  mapbox-extension.js  sss.css  sss.js  sss.print.css
tracking/templates/: device.html  index.html  print.html  sidebar.html
tracking/templates/tracking/: device_base.html  device_detail.html  device_form.html  device_list.html  device_map.html  pagination.html  resource_map.html
tracking/test_data/: beam_payload_test.sbd  iriditrak_test.eml  mp70_test.eml  spot_test.eml  zoleo_test.eml
weather/: admin.py  api.py  apps.py  models.py  tasks.py  test_models.py  test_views.py  urls.py  utils.py  views.py
weather/management/commands/: download_weather_data.py  station_ips.py  station_metadata.py  upload_cached_observations.py  write_observation.py
weather/migrations/: 0001_initial.py  0002_auto_20160808_1640.py  0002_auto_20181212_1352.py  0003_auto_20200102_0914.py  0003_weatherstation_manufacturer.py  0004_auto_20170619_0909.py
weather/templates/weather/: index.html  station.html
(+26 files in other folders)
