[project]
name = "resource_tracking"
version = "1.4.26"
description = "DBCA internal corporate application to download and serve data from remote tracking devices."
authors = [
  { name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" },
  { name = "Rocky Chen", email = "rocky.chen@dbca.wa.gov.au" },
  { name = "Adon Metcalfe", email = "adon.metcalfe@dbca.wa.gov.au" },
  { name = "Wilson Cheung", email = "wilson.cheung@dbca.wa.gov.au" },
  { name = "Patrick Maslen", email = "patrick.maslen@dbca.wa.gov.au" },
  { name = "Brendan Cale", email = "brendan.cale@dbca.wa.gov.au" },
]
license = "Apache-2.0"
requires-python = ">=3.12,<4.0"
dependencies = [
  "django == 4.2.18",
  "psycopg[binary,pool] == 3.2.4",
  "dbca-utils == 2.0.3",
  "django-extensions == 3.2.3",
  "python-dotenv == 1.0.1",
  "dj-database-url == 2.3.0",
  "gunicorn == 23.0.0",
  "unicodecsv == 0.14.1",
  "whitenoise[brotli] == 6.8.2",
  "sentry-sdk[django]==2.22.0",
  "django-tastypie == 0.14.7",
  "django-geojson == 4.1.0",
  "azure-storage-blob == 12.23.1",
  "uvicorn[standard] == 0.34.0",
  "uvicorn-worker == 0.3.0",
  "orjson == 3.10.13",
]

[dependency-groups]
dev = [
  "ipython >= 8.31.0",
  "ipdb >= 0.13.13",
  "mixer >= 7.2.2",
  "pre-commit >= 4.0.1",
]

[project.urls]
homepage = "https://github.com/dbca-wa/resource_tracking"
source = "https://github.com/dbca-wa/resource_tracking.git"
GitHub = "https://github.com/dbca-wa/resource_tracking"

# Reference: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
  "E722", # Bare except
]

# Reference: https://www.djlint.com/docs/configuration/
[tool.djlint]
profile = "django"
