[project]
name = "resource_tracking"
version = "1.4.37"
description = "DBCA internal corporate application to download and serve data from remote tracking devices."
authors = [
  { name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" },
  { name = "Rocky Chen", email = "rocky.chen@dbca.wa.gov.au" },
  { name = "Adon Metcalfe", email = "adon.metcalfe@dbca.wa.gov.au" },
  { name = "Wilson Cheung", email = "wilson.cheung@dbca.wa.gov.au" },
  { name = "Patrick Maslen", email = "patrick.maslen@dbca.wa.gov.au" },
  { name = "Brendan Cale", email = "brendan.cale@dbca.wa.gov.au" },
]
license = "Apache-2.0"
requires-python = ">=3.13,<4.0"
dependencies = [
  "django==5.2.6",
  "psycopg[binary,pool]==3.2.10",
  "dbca-utils==2.1.3",
  "django-extensions==4.1",
  "python-dotenv==1.1.1",
  "dj-database-url==3.0.1",
  "gunicorn==23.0.0",
  "unicodecsv==0.14.1",
  "whitenoise[brotli]==6.11.0",
  "sentry-sdk[django]==2.39.0",
  "django-geojson==4.2.0",
  "azure-storage-blob==12.27.0",
  "uvicorn[standard]==0.37.0",
  "uvicorn-worker==0.4.0",
  "orjson==3.11.3",
  "django-crispy-forms==2.4",
  "crispy-bootstrap5==2025.6",
  "h11==0.16",
  "django-tastypie==0.15.1",
  "pygeopkg==0.1.3",
]

[dependency-groups]
dev = ["ipython>=9.6.0", "ipdb>=0.13.13", "mixer>=7.2.2", "pre-commit>=4.3.0"]

[project.urls]
homepage = "https://github.com/dbca-wa/resource_tracking"
source = "https://github.com/dbca-wa/resource_tracking.git"
GitHub = "https://github.com/dbca-wa/resource_tracking"

# Reference: https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 140

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
  "E722", # Bare except
]

# Reference: https://www.djlint.com/docs/configuration/
[tool.djlint]
profile = "django"
